--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="./assets/css/weather-icons.min.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Weather Dashboard</title>
 </head>
@@ -18,33 +19,34 @@
 
     <div class="container flex grid grid-cols-3 gap-1">
         <div class="citysearch grid-cols-1 ml-2 mt-8 col-span-1">
-            <h1>Search for a city:</h1>
+            <h1 class="font-bold text-lg">Search for a city:</h1>
             <input type="text" id="cityinput"
                 class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
             <button id="submitcity"
                 class="mt-3 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-10 rounded-full">Search</button>
-                <div class="city-history mt-3"></div>
+                <div class=></div>
+                <div class="city-history mt-3 grid grid-cols-1"></div>
         </div>
 
-        <div class="weathersummary grid grid-cols-1 ml-8 mt-8 col-span-2">
+        <div class="weathersummary grid grid-cols-1 ml-8 mt-8 h-2/5 col-span-2">
             <div class="weather border col-span-1">
             </div>
-            <div class="forecastcards mt-3 grid col-span-1 grid-cols-5 gap-5">
-                <span class=col-span-5>5 Day forecast:</span>
+            <div class="forecastcards mt-1 grid col-span-1 grid-cols-5 gap-5">
+                <div class=col-span-5>5 Day forecast:</div>
                 <!--Card 1-->
-                <div class="day1 rounded overflow-hidden border bg-blue-900 text-white p-2">
+                <div class="day1 rounded overflow-hidden border bg-blue-900 text-white p-1">
                 </div>
                 <!--Card 2-->
-                <div class="day2 rounded overflow-hidden border bg-blue-900 text-white p-2">
+                <div class="day2 rounded overflow-hidden border bg-blue-900 text-white p-1">
                 </div>
                 <!--Card 3-->
-                <div class="day3 rounded overflow-hidden border bg-blue-900 text-white p-2">
+                <div class="day3 rounded overflow-hidden border bg-blue-900 text-white p-1">
                 </div>
                 <!--Card 1-->
-                <div class="day4 rounded overflow-hidden border bg-blue-900 text-white p-2">
+                <div class="day4 rounded overflow-hidden border bg-blue-900 text-white p-1">
                 </div>
                 <!--Card 1-->
-                <div class="day5 rounded overflow-hidden border bg-blue-900 text-white p-2">
+                <div class="day5 rounded overflow-hidden border bg-blue-900 text-white p-1">
                 </div>
             </div>
         </div>
