--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
                 class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
             <button id="submitcity"
                 class="mt-3 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-10 rounded-full">Search</button>
-                <div class=></div>
+                <div class="border-b-4 border-black p-2"></div>
                 <div class="city-history mt-3 grid grid-cols-1"></div>
         </div>
 
         <!--Current weather summary with daily cards-->
         <div class="weathersummary grid grid-cols-1 ml-8 mt-8 h-2/5 col-span-2">
-            <div class="weather border col-span-1">
+            <div class="weather border border-black col-span-1">
             </div>
             <div class="forecastcards mt-1 grid col-span-1 grid-cols-5 gap-5">
                 <div class=col-span-5>5 Day forecast:</div>
